--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "English-tutor-matching-platform",
+  "name": "english-tutor-matching-platform",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,10 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.2",
     "express-session": "^1.17.2",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "mysql2": "^2.3.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
   },
