--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.2",
     "express-session": "^1.17.2",
+    "faker": "^5.5.3",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
