--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
